# crystal

./: 404.html  CLAUDE.md  Cargo.toml  Makefile  PRD.md  README.md  configuration.html  demo-stand.html  gh-pages-roadmap.md  index.html  installation.html  introduction.html  keybindings.html  print.html  renaiming.md  searchindex.js  searchindex.json  views.html
.claude/skills/rust-developer/: SKILL.md
.claude/skills/rust-tester/: SKILL.md
.github/workflows/: ci.yml  pages.yml  release.yml
book/: book.toml
book/src/: 404.md  SUMMARY.md  configuration.md  demo-stand.md  installation.md  introduction.md  keybindings.md  views.md
book/src/views/: debug.md  describe.md  detail.md  logs.md  port-forward.md  query-pane.md  resource-list.md  yaml.md
crates/crystal-app/: Cargo.toml
crates/crystal-app/src/: app.rs  app_log.rs  command.rs  event.rs  keybindings.rs  main.rs  resource_switcher.rs  state.rs
crates/crystal-app/src/app/: tests.rs
crates/crystal-app/src/command/: tests.rs
crates/crystal-app/src/keybindings/: tests.rs
crates/crystal-app/src/panes/: app_logs_pane.rs  exec_pane.rs  help.rs  logs_pane.rs  mod.rs  port_forwards_pane.rs  resource_detail.rs  resource_list.rs  yaml_pane.rs
crates/crystal-app/src/panes/resource_list/: mod.rs  tests.rs
crates/crystal-app/src/state/: tests.rs
crates/crystal-config/: Cargo.toml
crates/crystal-config/src/: defaults.toml  general.rs  keybindings.rs  lib.rs
crates/crystal-core/: Cargo.toml
crates/crystal-core/src/: actions.rs  client.rs  context.rs  error.rs  exec.rs  informer.rs  lib.rs  logs.rs  port_forward.rs  resource.rs  terminal_manager.rs
crates/crystal-core/src/client/: tests.rs
crates/crystal-core/src/resource/: tests.rs
crates/crystal-core/src/resources/: deployment.rs  job.rs  node.rs  pod.rs  pvc.rs  secret.rs  tests.rs
crates/crystal-terminal/: Cargo.toml
crates/crystal-terminal/src/: context_env.rs  lib.rs
crates/crystal-tui/: Cargo.toml
crates/crystal-tui/src/: layout.rs  lib.rs  pane.rs  tab.rs  theme.rs  view_registry.rs
crates/kubetile-app/: Cargo.toml
crates/kubetile-app/src/: app.rs  app_log.rs  command.rs  event.rs  keybindings.rs  main.rs  resource_switcher.rs
crates/kubetile-app/src/app/: actions.rs  context.rs  input.rs  logs_exec.rs  mouse.rs  pane_ops.rs  port_forward.rs  query.rs  render.rs  tabs.rs  tests.rs  watchers.rs
crates/kubetile-app/src/command/: tests.rs
crates/kubetile-app/src/keybindings/: commands.rs  parsing.rs  tests.rs
crates/kubetile-app/src/panes/: app_logs_pane.rs  exec_pane.rs  help.rs  logs_pane.rs  mod.rs  port_forwards_pane.rs  query_pane.rs  resource_detail.rs  yaml_pane.rs
crates/kubetile-app/src/panes/query_pane/: completion.rs  editor.rs  mod.rs  popups.rs  result.rs
crates/kubetile-app/src/panes/resource_list/: mod.rs  tests.rs
crates/kubetile-config/: Cargo.toml
crates/kubetile-config/src/: defaults.toml  general.rs  keybindings.rs  lib.rs  theme.rs  views.rs
crates/kubetile-core/: Cargo.toml
crates/kubetile-core/src/: actions.rs  lib.rs  query.rs  query_history.rs  saved_queries.rs
crates/kubetile-terminal/: Cargo.toml
crates/kubetile-terminal/src/: context_env.rs  pty.rs  renderer.rs  vt.rs
crates/kubetile-tui/: Cargo.toml
crates/kubetile-tui/src/: layout.rs  pane.rs  tab.rs  view_registry.rs
demo-stand/: README.md  cleanup.sh  setup.sh
demo-stand/manifests/: 01-namespaces.yaml  02-apps.yaml  03-configs.yaml  04-jobs.yaml  05-errors.yaml  05b-postgres-init.yaml  06-postgres.yaml  postgres-init.sql
docs/: RELEASE.md  demo-howto.md
docs/drafts/chatgpt/: 01-arch-found.txt  README.md
docs/tutorial/: 00-project-vision.md  ch01-project-scaffold.md  ch02.00-kubernetes-core.md  ch02.01-workspace-dependencies.md  ch02.02-error-types.md  ch02.03-resource-summaries.md  ch02.04-context-resolver.md  ch02.05-kube-client.md  ch02.06-resource-watcher.md  ch02.07-resource-list-state.md  ch02.08-theme-and-widgets.md  ch02.09-render-context.md  ch02.10-wiring-the-event-loop.md  ch02.11-verification.md
ideas/: 00-main.txt  actions_DRY.md  mouse.md  pane-help.md  plugin.md  query-panel.md  query-ux-improvements.md  refactor.md
ideas/pages/: claude.md  codex.md  gemini.md  summary.md
pages/: downloads.html  help.html  index.html  style.css
theme/: custom.css
views/: debug.html  describe.html  detail.html  logs.html  port-forward.html  query-pane.html  resource-list.html  yaml.html
(+99 files in other folders)
