[workspace]
resolver = "2"
members = [
    "crates/crystal-app",
    "crates/crystal-core",
    "crates/crystal-tui",
    "crates/crystal-config",
    "crates/crystal-terminal",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
kube = { version = "3.0", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.27", features = ["latest"] }
futures = "0.3"
jiff = "0.2"
tokio-util = { version = "0.7", features = ["rt"] }
serde_json = "1"
serde_yaml = "0.9"
portable-pty = "0.9"
