[package]
name = "crystal-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crystal"
path = "src/main.rs"

[dependencies]
crystal-tui = { path = "../crystal-tui" }
crystal-config = { path = "../crystal-config" }
crystal-core = { path = "../crystal-core" }
crystal-terminal = { path = "../crystal-terminal" }
kube.workspace = true
k8s-openapi.workspace = true
tokio.workspace = true
tokio-util.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vt100.workspace = true
