[package]
name = "crystal-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crystal"
path = "src/main.rs"

[dependencies]
crystal-tui = { path = "../crystal-tui" }
kubetile-config = { path = "../kubetile-config" }
kubetile-core = { path = "../kubetile-core" }
crystal-terminal = { path = "../crystal-terminal" }
kube.workspace = true
k8s-openapi.workspace = true
tokio.workspace = true
tokio-util.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vt100.workspace = true
clap.workspace = true
toml.workspace = true
portable-pty.workspace = true
jiff.workspace = true

[package.metadata.deb]
maintainer = "crystal"
copyright = "2026, Crystal Project"
license-file = ["../../LICENSE", "0"]
depends = "libc6"
assets = [
    ["target/release/crystal", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/crystal/README", "644"],
]
