[package]
name = "crystal-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
serde.workspace = true
jiff.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
portable-pty.workspace = true
vt100.workspace = true

[dev-dependencies]
