[package]
name = "kubetile-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kubetile"
path = "src/main.rs"

[dependencies]
kubetile-tui = { path = "../kubetile-tui" }
kubetile-config = { path = "../kubetile-config" }
kubetile-core = { path = "../kubetile-core" }
kubetile-terminal = { path = "../kubetile-terminal" }
kube.workspace = true
k8s-openapi.workspace = true
tokio.workspace = true
tokio-util.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vt100.workspace = true
clap.workspace = true
toml.workspace = true
portable-pty.workspace = true
jiff.workspace = true
arboard.workspace = true
dirs = "6"

[package.metadata.deb]
maintainer = "kubetile"
copyright = "2026, KubeTile Project"
license-file = ["../../LICENSE", "0"]
depends = "libc6"
assets = [
    ["target/release/kubetile", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/kubetile/README", "644"],
]
